--- a/docs/tecnicos/mt05.md
+++ b/docs/tecnicos/mt05.md
@@ -211,17 +211,17 @@ y cómo esta estructura se comporta con un efector tendido por cuerdas en una co
                 <input class="slide-open" type="radio" id="slide-1" 
                       name="slide" aria-hidden="true" hidden="" checked="checked">
                 <div class="slide-item">
-                    <iframe src="https://drive.google.com/file/d/1KHNbQdBPbNzerb8r32G0izXJKgYQXaDW/preview" width="640" height="480" allow="autoplay"></iframe>
+                   <div align="center"><iframe src="https://drive.google.com/file/d/1KHNbQdBPbNzerb8r32G0izXJKgYQXaDW/preview" width="400" height="320" allow="autoplay"></iframe></div>
                 </div>
                 <input class="slide-open" type="radio" id="slide-2" 
                       name="slide" aria-hidden="true" hidden="">
                 <div class="slide-item">
-                   <iframe src="https://drive.google.com/file/d/1LpFF-xKaNxKgrkV8mY8RuKCl7mmjRRbj/preview" width="640" height="480" allow="autoplay"></iframe>
+                   <div align="center"><iframe src="https://drive.google.com/file/d/1LpFF-xKaNxKgrkV8mY8RuKCl7mmjRRbj/preview" width="400" height="320" allow="autoplay"></iframe></div>
                 </div>
                 <input class="slide-open" type="radio" id="slide-3" 
                       name="slide" aria-hidden="true" hidden="">
                 <div class="slide-item">
-                    <iframe src="https://drive.google.com/file/d/1Jvcg1PpshbiNHh2IL5jVPsX0B6RPJglz/preview" width="640" height="480" allow="autoplay"></iframe>
+                   <div align="center"><iframe src="https://drive.google.com/file/d/1Jvcg1PpshbiNHh2IL5jVPsX0B6RPJglz/preview" width="400" height="320" allow="autoplay"></iframe></div>
                 </div>
                 <label for="slide-3" class="slide-control prev control-1">‹</label>
                 <label for="slide-2" class="slide-control next control-1">›</label>
