--- a/docs/diseno/md03.md
+++ b/docs/diseno/md03.md
@@ -1,72 +1,41 @@
-# MD01 - Proyecto y contexto 
+# MD03 - Prototipado y fabricación
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/intro.png"></div>
 
-## AoWS & espacios de diseño
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/AtlasWeakSignals_1-1200x900.jpg"></div>
-¿Qué es una señal débil?
+## Resumen de las Clases
 
-Una señal débil es un indicador de un problema potencialmente emergente, que puede volverse significativo en el futuro.
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/grafic.png"></div>
- Las señales débiles complementan el análisis de tendencias y pueden utilizarse para ampliar futuros alternativos.
+### Proyectos y Propuestas:
 
-<A HREF="https://www.sitra.fi/en/articles/what-is-a-weak-signal/#:~:text=A%20weak%20signal%20is%20an%20existing%20thing%20or%20phenomenon%20that,event%20that%20describes%20the%20subject">+info </A>
+Se discutieron proyectos sobre reciclaje y fabricación digital, como filtros de carbón activado, reciclaje de plásticos para impresión 3D, gestión de residuos de comida, y un desalinizador solar.
+Nuevas propuestas incluyeron estructuras inflables, una cámara de cartón reciclado, y un juego inclusivo con luz, sonido y vibración. También se abordó la regeneración de suelos urbanos mediante módulos adaptables.
 
-## 00.
+### Planificación y Documentación:
 
-Lo primero es contar con un Espacio de Diseño. Nos apoyaermos de la plataforma <A HREF="https://miro.com/">miro </A> para poder empezar a diseñar algunos futuros emergentes 🚀
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/espaciodedise%C3%B1o.png"></div>
+Se introdujo un tablero en Miro para gestionar proyectos, documentar el progreso y cuantificar materiales y tiempos.
+Se reforzó la importancia de planificar, gestionar recursos, y mantener documentación precisa en los tableros de Miro, además de coordinar el uso de laboratorios.
 
-## 01.
-Comenzaremos por elegir dos cartas a ciegas, como en un tarot, las dos cartas elegidas serán las señales débiles para este ejercicio.
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/se%C3%B1alesdebiles.png"></div>
+### Desafíos Técnicos:
 
-Tocó jugar con Technology for equality y Reconfigure your Body, dos cartas muy interesantes que increíblemente parecen estar en armonía con las ideas que han estado rondando en mi cabeza este último tiempo, veamos cómo sigue la dinámica y que surge de todo esto.
+Problemas con la plataforma y licencias de software, además de dificultades con el desarrollo de los proyectos.
+Se abordaron problemas técnicos con la inflación de estructuras inflables y la necesidad de mejorar los materiales y el proceso de impresión 3D.
 
-## 02. 
-Toca colocar las señales débiles elegidas en el Design Space, boca arriba, en las cajas marcadas 01 y 02 respectivamente, y tomé 10 min para analizar las siguientes preguntas.
+### Siguientes Pasos:
 
-¿Qué significan para ti?
-¿Qué crees que son?
+Completar los tableros de Miro, decidir enfoques específicos de los proyectos y preparar dudas para la próxima reunión.
+Tomar decisiones concretas sobre los proyectos, visitar un taller de fábrica, y hacer un prototipo a menor escala antes de la versión final.
 
-Si debiera describirlas en una frase creo que sería: “Cómo potenciar las herramientas tecnológicas para que estas promuevan un acceso democrático y como éstas nos pueden asistir como una extensión de nuestro cuerpo”.
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/punteose%C3%B1alesdebiles.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/1.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/2.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/3.png"></div>
 
-## 03.
+Para saber si me encuentro bien rumbeado con la herramienta opté por utilizar la IA para solicitarle feedback de lo que esta pudiera interpretar de mi diagrama, los resultados fueron los siguientes: 
 
-En este punto nos toca mirar algunas Áreas de Oportunidad que se están usando en Fab Lab Barcelona para prototipar futuros emergentes. Entre estas debimos elegir dos cartas a ciegas nuevamente, y colócalas en el Espacio de Diseño.
+Este tablero representa un proyecto centrado en la creación de un sistema de reciclaje de botellas PET para su uso en impresión 3D. El enfoque principal es la fabricación de un extrusor que permita transformar el PET reciclado en filamento de impresión 3D, abordando varios retos técnicos como la integración con impresoras de escritorio, la fabricación de piezas robustas y la adaptación a altas temperaturas.
 
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/areasdeoportunidad.png"></div>
+Se han identificado varios recursos clave, incluyendo el modelado e impresión 3D, el uso de corte láser y la implementación de electrónica y programación. Las ideas principales giran en torno a la mejora del extrusor, con pasos definidos hacia la experimentación con materiales y la mejora de procesos técnicos como el extruido manual y la manufactura de carcasas.
 
-Ya se puede empezar a ver posibles interconexiones que emergen de la triangulación de las tarjetas, surgen conceptos tales cómo Digital Fabrication, Maker Education, Coding, Design for Social Innovation, STEAM, Prototyping, Aprendizaje Basado en Proyectos y Maker Comunity.
+En resumen, el proyecto está bien estructurado, con objetivos claros, recursos definidos y un enfoque en la planificación de las siguientes etapas a medida que se avanza hacia la construcción de un prototipo funcional.
 
-## 04, 05 y 06. 
+### Conclusión
 
-Toca escoger dos de todos los Conceptos Detonantes dispuestos abajo. Estas serán palabras clave o campos de investigación  con los que estamos trabajando y prototipando en esta sesión. La idea es que estas tarjetas pueden ayudar a encontrar oportunidades o relaciones que no se han pensado aún.
-
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/conceptosdetonantes.png"></div>
-
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/detonantess.png"></div>
-
-Trabajaré con las tarjetas Open source Innovation y Local Materials Recirculation, me imagino a estas tarjetas cohabitando en un escenario de reutilización de materiales de desecho cómo pueden ser las botellas de plástico PET dándole una vuelta de rosca a las tecnologías de fabricación digital existentes disponiendo un kit de prototipado para instituciones educativas/clubes maker de código abierto y de bajo costo.
-
-## 07. Espacio de Diseño multiescalar
-
-En este punto se busca mapear la idea de proyecto de manera multiescalar para encontrar recursos, infraestructura , referentes y posibilidades reales de co-desarrollo e intervención. Se usan las siguientes categorías para organizar la información en diferentes niveles.
-
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/escalas.png"></div>
-
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/espaciomultiescalar.png"></div>
-
-## Ejercicio clase 2 ALTERNATIVE PRESENTS
-
-De las áreas de interés a los presentes alternativos:
-
-
-
-Ahora vamos un paso más allá e intentemos describir los presentes alternativos que van surgiendo de nuestro espacio de diseño, experimentos y acciones. Los escribimos en presente y en primera persona ofreciendo como apoyo una serie de ejemplos de todo lo que hemos estado haciendo.
-
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/clase2.png" /></div>
-
-Aquí les comparto una previzualización del tablero dónde estuvimos trabajando!
-
-<div align="center"><iframe src="https://miro.com/app/board/uXjVKQD5ciI=/?moveToWidget=3458764587282666720&cot=14" width="800" height="700"></iframe></div>
+Las dos clases han permitido avanzar significativamente en la definición de los proyectos, abarcando temas clave como reciclaje, estructuras inflables y fabricación digital. La planificación y la documentación en el tablero de Miro se han convertido en un eje central para asegurar la organización y el progreso de los trabajos. A pesar de los desafíos técnicos encontrados, como problemas de materiales y diseño, el equipo está tomando medidas para enfrentarlos, como la coordinación del uso de laboratorios y la visita a un taller de fábrica. La colaboración y el intercambio de ideas entre los estudiantes han sido fundamentales para mantener la motivación y avanzar en la ejecución de los proyectos.
 
