--- a/docs/innovacion/mi02.md
+++ b/docs/innovacion/mi02.md
@@ -7,3 +7,84 @@ MI01 Innovación abierta y distribuida
 ## MI02 Desarrollo sostenible y economía circular 
 
 MI03 Emprendimiento.
+
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MI01/intro.png"></div>
+
+
+En esta instancia comenzamos por definir en una escala de colores el grado de sostenibilidad en nuestras vidas, para ello nos preguntamos ¿Cómo de sostenible es nuestro estilo de vida? 
+
+
+### Sostenibilidad y Economía Circular: 
+
+Discutimos conceptos clave como sostenibilidad personal y economía circular. Paola lideró una discusión teórica seguida de ejercicios prácticos en la que pudimos evaluar nuestras prácticas sostenibles y el ciclo de vida de materiales (como la madera y la yerba mate).
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MI01/indice.png"></div>
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MI01/mi.png"></div>
+
+
+### Evaluación de Sostenibilidad: 
+
+A través de un ejercicio, buscamos analizar nuestras prácticas sostenibles y cómo podrían influir en el entorno local, tanto en términos personales como de proyectos.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MI01/ejer1.png"></div>
+
+Con el objetivo de tener un análisis rápido (feedback) de la información dispuesta en el tablero opté por pedirle a una IA que me proporcione comentarios sobre mi espacio en el miro, obteniendo los siguientes resultados:
+
+Tu diagrama parece estar centrado en el proyecto PETextruder y está organizado en diferentes secciones que exploran aspectos clave de tu proyecto, desde su viabilidad técnica hasta las influencias externas y las actividades que realizas en tu trabajo.
+
+
+#### Análisis por secciones:
+
+##### Viabilidad técnica:
+
+- Disponibilidad de insumos en el mercado local y comprensión del concepto son dos elementos críticos que podrían afectar el éxito del proyecto. Parece que ya identificaste algunos desafíos, como la falta de insumos o materiales locales y la comprensión del concepto entre otros.
+
+- Conclusión: Es necesario profundizar en la cadena de suministro local para asegurar la viabilidad técnica, y buscar formas de simplificar la explicación del concepto a audiencias clave.
+
+##### ¿Qué sé y me gusta hacer?:
+
+- Aquí mencionas habilidades como desarmar cosas para ver por qué fallan y los hacks que te facilitan la vida, lo cual demuestra tu interés por resolver problemas técnicos de manera práctica y creativa.
+- Conclusión: El enfoque práctico y experimental que tienes puede ser un gran activo en el desarrollo del PETextruder, ya que te permite iterar rápidamente en pruebas técnicas.
+
+##### ¿Qué hago en mi trabajo?:
+
+- Describiste actividades como pruebas y asistencia técnica, lo que implica que estás involucrado de manera activa en la verificación del funcionamiento del extrusor y en proporcionar soporte.
+- Conclusión: Este enfoque práctico es esencial para validar la funcionalidad y la eficiencia del PETextruder, pero podría ser útil documentar más estas pruebas para mejorar el proceso de iteración.
+##### ¿A quién influyo con mi trabajo? (Makers):
+
+- Tu proyecto parece estar dirigido a la comunidad educativa y otros makers, lo cual abre la posibilidad de tener un impacto significativo en el aprendizaje práctico y en la adopción de tecnologías sostenibles.
+- Conclusión: Es fundamental fortalecer las conexiones con esta comunidad, ya que pueden ser tanto tus usuarios como tus colaboradores para recibir retroalimentación valiosa.
+
+##### ¿Quién influye en mi trabajo?:
+
+- Identificas a otros makers, docentes e investigadores como influencias. Este reconocimiento de las partes interesadas muestra que comprendes la importancia de las redes colaborativas.
+- Conclusión: Potenciar estas relaciones con comunidades de investigación y educación te permitirá obtener ideas y recursos útiles, además de validar tu trabajo desde perspectivas externas.
+
+#### Feedback general:
+
+- Foco en el usuario final: Aunque identificaste a la comunidad educativa y a los makers como quienes se benefician de tu trabajo, podría ser útil profundizar en sus necesidades específicas. ¿Cómo el PETextruder soluciona un problema relevante para ellos? Tener una idea clara de esto puede guiarte en las decisiones de diseño y simplificar la adopción del producto.
+- Documentación y comunicación: Al observar el interés en hacer pruebas y tu capacidad para desarmar y explorar sistemas, parece crucial que toda esa información se documente adecuadamente. Un buen sistema de documentación no sólo te ayudará a mejorar iteraciones futuras, sino que también puede facilitar que otros makers repliquen o colaboren en tu proyecto.
+- Escalabilidad del proyecto: La viabilidad técnica es un área crítica que has identificado. Considerar cómo escalar este proyecto (tanto en materiales como en comprensión) será esencial si planeas que otras personas lo adopten o que se implemente en diferentes comunidades.
+
+En resumen, tu proyecto PETextruder tiene una base sólida de conocimiento técnico y estás claramente bien conectado con las comunidades que pueden beneficiarse de él. Aún así, podrías mejorar en la parte de comunicación del concepto y en la validación técnica y práctica de los insumos y procesos que empleas.
+
+### Diseño Circular y Biomateriales: 
+
+En esta sesión, Paola presentó los principios del diseño circular, destacando la importancia del uso de materiales sostenibles y el reciclaje en proyectos innovadores. Se presentaron ejemplos de iniciativas que aplican estos conceptos, como proyectos en Holanda y Barcelona.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MI01/ejer2.png"></div>
+
+
+En el diagrama elaborado, el proyecto se identifica con varios principios clave relacionados con el diseño circular y la sostenibilidad:
+
+**Less is more (Menos es más)**: El principio central del diagrama parece ser la idea de reducir la complejidad del diseño y los materiales. Esto se traduce en una simplificación del proceso y en una reducción del uso de recursos.
+
+**Systemic Thinking (Pensamiento Sistémico):** Este enfoque fomenta una visión global y a largo plazo, buscando generar una metodología open source que pueda ser replicada y compartida, lo que maximiza el impacto del proyecto.
+
+**Materials with less impact (Materiales con menos impacto): **Se prioriza el uso de materiales que generen un menor impacto ambiental, al minimizar el uso de insumos adicionales que puedan convertirse en desechos. Además, se busca reutilizar materiales ya existentes, dándoles una segunda vida.
+
+**Simplicidad en el proceso:** Se destaca la necesidad de simplificar el funcionamiento del extrusor para que sea más accesible y fácil de usar, lo cual está alineado con la idea de reducción y eficiencia.
+
+**Conclusión:** El diagrama resume las acciones circulares claves para el proyecto basadas en la simplificación, el pensamiento sistémico y la minimización del impacto ambiental. La implementación de un enfoque de diseño open source y de menor uso de materiales, lo cual es esencial para avanzar hacia un sistema más sostenible y replicable.
