--- a/docs/tecnicos/mt06.md
+++ b/docs/tecnicos/mt06.md
@@ -1,269 +1,222 @@
 
-# MT04 - Introducción a electrónica y programación 
+# MT06 - Networking
 
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT04/intro.png"></div>
+### ESP32
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT06/esp32.jpg"></div>
 
+El ESP32 es un microcontrolador potente y versátil, ideal para aplicaciones de Internet de las Cosas (IoT). Desarrollado por Espressif, cuenta con capacidades de Wi-Fi y Bluetooth integradas, lo que permite la comunicación inalámbrica entre dispositivos. Este microcontrolador es ideal para proyectos que requieren conectividad en red y una buena capacidad de procesamiento, como el envío y recepción de datos a través de protocolos de comunicación en la nube.
 
-En este módulo técnico toca trabajar con electrónica y programación, concretamente trabajaremos con la placa Arduino, concretamente con la placa Arduino UNO. Para programar el microcontrolador utilizaremos el IDE de Arduino o el Arduino Cloud editor. También nos apoyaremos en simuladores tales cómo Tinkercad, Wokwi o Fritzing. 
+### MQTT (Message Queuing Telemetry Transport)
 
-El desafío consta de lo siguiente: 
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT06/mqtt.png"></div>
 
-- LEER MÍNIMO DOS INPUTS
-- ACTUAR MÍNIMO DOS OUTPUTS
+MQTT es un protocolo de comunicación ligero diseñado para la transmisión de datos en redes con ancho de banda limitado o en aplicaciones IoT donde la eficiencia es crucial. MQTT utiliza un modelo de publicador/suscriptor: los dispositivos (clientes) pueden publicar mensajes en "tópicos" específicos o suscribirse a estos tópicos para recibir mensajes. Un broker MQTT (servidor) gestiona la distribución de los mensajes entre los clientes suscritos. Este modelo es útil para conectar múltiples dispositivos, ya que permite una comunicación eficiente sin requerir conexiones punto a punto.
 
-En mi caso optaré por orientar esta práctica a una posible aplicación en el proyecto final, concretamente, controlar un extrusor de impresora 3D con la placa Arduino UNO. Tomaré como entradas una sonda PT100 y un potenciómetro, mientras que las salidas serán un hotend de 20w y un motor de pasos Nema 17. 
+### Wokwi
 
-## 01.
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT06/wokwi_1.jpg"></div>
 
-Lo primero fue entender cómo funciona la sonda PT100 de dos hilos, podemos decir que esta sonda funciona como una resistencia variable que aumenta su resistencia en función al aumento de temperatura. Esta sonda fue recuperada de un printcore de Ultimaker 3 roto por lo que un buen inicio es buscar información sobre la electrónica asociada a estos componentes. De la búsqueda de material pudimos obtener un indicio entre los archivos dispuestos en los repositorios github de <A HREF="https://github.com/Ultimaker/Ultimaker3">Ultimaker</A>. Desde aquí logramos calcular algunos valores teóricos de los voltajes deberíamos leer en el arduino y saber a qué temperatura corresponde ese valor, podríamos decir que debemos caracterizar el comportamiento del sensor. 
+Wokwi es un simulador de hardware en línea que permite desarrollar y probar código en microcontroladores como el ESP32, Arduino y Raspberry Pi, sin necesidad de hardware físico. Es una herramienta útil para pruebas de concepto y para el desarrollo de prototipos, ya que facilita la experimentación y el ajuste de código en un entorno controlado.
 
- 
+### Eclipse MQTT Broker y Public MQTT Brokers
 
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT04/teoria.jpg"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT06/broker.png"></div>
 
+Para implementar MQTT en Wokwi, es necesario el uso de un public MQTT broker. Existen múltiples opciones de brokers públicos, como Eclipse Mosquitto, broker.hivemq.com, y otros. Estos brokers permiten la prueba de aplicaciones IoT en un entorno compartido sin necesidad de configurar un servidor propio, lo cual es ideal para prototipos y pruebas.
 
+### Arduino Web Editor
 
-El código para esta prueba se basó en el siguiente <A HREF="https://hetpro-store.com/TUTORIALES/sensor-pt100/">sketch</A>. Con una pendiente teórica del 1.94 corrimos el siguiente código y obtuvimos lecturas muy convincentes. 
-
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT04/lecturas01.png"></div>
-
-```c++
-const int analogInPin = A0;  // Analog input pin that the potentiometer is attached to
-const int analogOutPin = 9; // Analog output pin that the LED is attached to
-float m = 0.0;
-float tempF=0.0;
-int sensorValue = 0;        // value read from the pot
-long int sensorValue1 = 410.0 ;
-long int sensorValue2 = 668.0;
-int temperatura1 = 0;
-int temperatura2 = 500;
-int offset = 25;
-String inString = "";
-
-int outputValue = 0;        // value output to the PWM (analog out)
-int SerialComando = 0;
-void setup() {
-  Serial.begin(9600);
-  calibracionProceso();
-}
-
-void loop() {
-  sensorValue = analogRead(analogInPin);
-  Serial.print("Sensor PT100 = ");
-  Serial.print(sensorValue);
-  Serial.print("\t Temperatura = ");
-  tempF=(float)(m*(sensorValue-sensorValue2)+temperatura2-offset);
-  Serial.print(tempF);
-  Serial.println("°C");  delay(100);
-}
-
-void calibracionProceso() {
-  
-  Serial.print("La pendiente del sistema es m=(y2-y1)/(x2-x1)=");
-  m = (float)((temperatura1 - temperatura2)/((float)sensorValue1 - (float)sensorValue2));
-  Serial.println(m);
-
-}
-```
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT06/arduino.png"></div>
 
 
-## 02. 
+Arduino Web Editor es una plataforma en línea proporcionada por Arduino para programar y gestionar proyectos en microcontroladores desde cualquier navegador con acceso a internet. Permite editar y cargar código directamente a placas compatibles, como el Arduino y ESP32, sin necesidad de instalar un software local. Entre sus ventajas destacan:
+- Acceso desde cualquier lugar: Solo necesitas un navegador y conexión a internet para acceder a tus proyectos y cargar código a tus placas.
+Compatibilidad de placas: Soporta una amplia variedad de placas de Arduino y algunas de terceros, lo que permite trabajar con diversos microcontroladores.
+- Bibliotecas y soporte en la nube: Dispone de una biblioteca integrada en la nube, facilitando el uso de librerías sin preocuparse por instalaciones adicionales.
+- Colaboración y respaldo: Guarda automáticamente el código en tu cuenta de Arduino, lo que facilita compartir y respaldar tus proyectos.
 
-En este siguiente paso deberemos relacionar la entrada y la salida, la sonda PT100 y el hotend. Para ello deberemos implementar un sistema de control que mantenga estable la temperatura elegida, esto lo logramos implementando un sistema de control cerrado, con una retroalimentación y lo mejor, controlar la temperatura mediante un PID. El nombre PID proviene de sus tres componentes principales: Proporcional (P), Integral (I) y Derivativo (D). El controlador PID funciona leyendo un sensor, calculando la salida deseada del actuador y luego ajustando la salida del actuador en función del error entre la salida deseada y la medida actual.
+El uso de Arduino Web Editor simplifica la programación, especialmente en entornos educativos o colaborativos, permitiendo que estudiantes y profesionales puedan trabajar en sus proyectos sin restricciones de dispositivo o ubicación.
 
-El sketch se basa en un ejemplo proporcionado en la librería creada por <A HREF="https://github.com/RobTillaart/PID_RT/issues/5">RobTillaart</A>. En la misma basta con configurar los pines de entrada y salida. Para hallar los valores de las constanses PID existen algunas técnicas para calcular valores teóricos, en este caso se probaron algunos valores aleatorios y se procedió a ajustarlos hasta obtener un rendimiento aceptable.  
+
+## Paso a Paso de la Práctica
+
+### Paso 1: Configuración del Simulador Wokwi
+
+Ingreso al simulador Wokwi en el navegador y se agregan dos placas ESP32 en dos pestañas diferentes.
+Se configura cada ESP32 como un nodo MQTT. Uno actuará como publicador (enviando datos de un botón o potenciómetro), y el otro como suscriptor (recibiendo los datos y actuando en consecuencia).
+### Paso 2: Configuración del Broker MQTT en Wokwi
+En cada pestaña, se configura la conexión MQTT especificando un broker público, como broker.hivemq.com.
+Se define un tópico común (en este caso esp32/input) para que ambos ESP32 se comuniquen de forma correcta.
+### Paso 3: Código para el Publicador (ESP32 A)
+En el ESP32 A, se lee el estado de un botón conectado al microcontrolador y se publica el resultado en el tópico MQTT.
+Se declaran las variables de red y configuración del broker.
+En setup(), se conecta el ESP32 a Wi-Fi y se configura el broker MQTT.
+En loop(), se ferifica el estado del botón. Si el botón está presionado, se publica el mensaje "ON"; de lo contrario, se publica "OFF".
+
+Aquí está el código del publicador:
 
 ```c++
-#include "PID_RT.h"
+#include <WiFi.h>
+#include <PubSubClient.h>
 
-PID_RT PID;
+const char* ssid = "Wokwi-GUEST";
+const char* password = "";
+const char* mqtt_server = "broker.hivemq.com";
+const int mqtt_port = 1883;
 
-const int PWM_PIN = 3;  // UNO PWM pin
-
-int op = 0;
-float input = 0;
-
-const int analogInPin = A0;  // Analog input pin that the potentiometer is attached to
-const int analogOutPin = 9; // Analog output pin that the LED is attached to
-float m = 0.0;
-float tempF=0.0;
-int sensorValue = 0;        // value read from the pot
-long int sensorValue1 = 410.0 ;
-long int sensorValue2 = 668.0;
-int temperatura1 = 0;
-int temperatura2 = 500;
-int offset = 25;
-String inString = "";
-
-int outputValue = 0;        // value output to the PWM (analog out)
-int SerialComando = 0;
+WiFiClient espClient;
+PubSubClient client(espClient);
+int buttonPin = 2;
 
 void setup() {
-  Serial.begin(9600);
-
-  PID.setPoint(100);
-  PID.setOutputRange(0, 255);   //  PWM range
-  PID.setInterval(50);
-  PID.setK(10, 1, 15);
-  PID.start();
-  calibracionProceso();
+  pinMode(buttonPin, INPUT_PULLUP);
+  Serial.begin(115200);
+  setup_wifi();
+  client.setServer(mqtt_server, mqtt_port);
 }
 
-void loop() {
-  sensorValue = analogRead(analogInPin);
-  Serial.print("Sensor PT100 = ");
-  Serial.print(sensorValue);
-  Serial.print("\t Temperatura = ");
-  tempF=(float)(m*(sensorValue-sensorValue2)+temperatura2-offset);
-  Serial.print(tempF);
-  Serial.println("°C");  
-  
-  input = tempF;
-  //  input = analogRead(A0);
-  if (PID.compute(input))
-  {
-    op = PID.getOutput();
-    analogWrite(PWM_PIN, op);
-    Serial.print(" op: ");
-    Serial.print(op);
-    Serial.print(" ");
+void setup_wifi() {
+  delay(10);
+  WiFi.begin(ssid, password);
+  while (WiFi.status() != WL_CONNECTED) {
+    delay(500);
+    Serial.print(".");
+  }
+  Serial.println(" Conectado a WiFi");
+}
+
+void reconnect() {
+  while (!client.connected()) {
+    Serial.print("Intentando conectar al broker MQTT...");
+    if (client.connect("ESP32A")) {
+      Serial.println(" Conectado al broker MQTT");
+    } else {
+      Serial.print(" Error de conexión, rc=");
+      Serial.print(client.state());
+      Serial.println(" intentando de nuevo en 5 segundos");
+      delay(5000);
+    }
   }
 }
 
-void calibracionProceso() {
-  
-  Serial.print("La pendiente del sistema es m=(y2-y1)/(x2-x1)=");
-  m = (float)((temperatura1 - temperatura2)/((float)sensorValue1 - (float)sensorValue2));
-  Serial.println(m);
-
-}
-
-```
-
-<div align="center"><iframe width="640" height="360" src="https://www.youtube.com/embed/2yGvAI3e8X4" title="Prueba pid Arduino, pt100 + hotend 20w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
-
-
-## 03. 
-
-En este punto sumaremos una nueva entrada al circuito, el potenciómetro. Para la conexión conectaremos los pines de afuera a 5v y gnd mientras que el del medio lo conectaremos a la entrada analógica A1 para obtener una lectura entre 0 y 1023. A nivel de código solo basta con agregar en el loop un analogRead(); para obtener la lectura, adicionalmente podemos crear una variable para almacenar la lectura y luego poderla mostrar en pantalla mediante el monitor serial.
-
-En la siguiente gráfica obtenida del ploteo de las variables en el serial plotter podemos apreciar el rango de variación de la entrada analógica que cambia a la par de la resistencia del potenciómetro (señal color naranja), la señal de color negro es el valor equivalente a loa 100°C de la medida de la sonda PT100 y también se puede ver en color rojo la señal del pwm generada por el PID para estabilizar la temperatura.
-
-<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT04/ploteo.png"></div>
-
-
-## 04. 
-
-Ahora solo resta poder controlar el motor de pasos Nema 17 para tener todos los componentes necesarios para crear un extrusor controlado por arduino, este sería nuestra segunda salida controlada y con esta estaría completa la consigna. Para poder controlar el motor de pasos vamos a necesitar controlar el driver encargado de excitar las bobinas del motor con el voltaje de trabajo de estos motores pero recibiendo las señales de control de 5v desde el arduino. El driver a utilizar es el <A HREF="https://www.pololu.com/file/0J450/a4988_DMOS_microstepping_driver_with_translator.pdf">A4988</A>.  
-
-El código implementado se basó en el <A HREF="http://yomaker.com/control-de-motor-paso-a-paso/ ">tutorial</A>  de yomaker y quedó de la siguiente manera.
-
-```c++
-int steps = 5;       // pin step 5
-int direccion = 4;   // pin direccion 4
-int potenciometro;   // lectura del potenciometro
- 
-void setup() {                
-  
-  // inicializamos pin como salidas.
-  
-  pinMode(steps, OUTPUT); 
-  pinMode(direccion, OUTPUT); 
-}
- 
 void loop() {
- 
-    digitalWrite(direccion, HIGH);    // cambiamos de dirección segun pulsador
-    potenciometro = analogRead(A2);     // leemos el potenciometro
-    potenciometro = map(potenciometro,0,1024,900,2500);  // adaptamos el valor leido a un retardo
-    digitalWrite(steps, HIGH);         // Aqui generamos un flanco de bajada HIGH - LOW
-    delayMicroseconds(5);              // Pequeño retardo para formar el pulso en STEP
-    digitalWrite(steps, LOW);         // y el A4988 de avanzara un paso el motor
-    delayMicroseconds(potenciometro); // generamos un retardo con el valor leido del potenciometro
+  if (!client.connected()) {
+    reconnect();
   }
+  client.loop();
+
+  int buttonState = digitalRead(buttonPin);
+  if (buttonState == LOW) {  
+    client.publish("esp32/input", "ON");
+    Serial.println("Mensaje enviado: ON");
+  } else {
+    client.publish("esp32/input", "OFF");
+    Serial.println("Mensaje enviado: OFF");
+  }
+  delay(1000);  
+}
 ```
 
-<div align="center"><iframe width="315" height="560" src="https://youtube.com/embed/a4I6wSzQyYo" title="Prueba de funcionamiento - Manivela" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+### Paso 4: Código para el Suscriptor (ESP32 B)
+En el ESP32 B, se suscribe al tópico y, cuando se recibe un mensaje de "ON" o "OFF", se enciende o apaga un LED respectivamente.
+Se declaran las variables de red y configuración del broker.
+En setup(), se configura el LED y se suscribe el ESP32 al tópico esp32/input.
+En la función callback, se definen las acciones a realizar cuando se recibe un mensaje.
 
-
-
-
-## 05. La unificación
-
-
-Bueno, después de dar unas buenas vueltas al asunto, he intentado unificar el sistema de control de temperatura y el control de motor con potenciómetro fracasando con total éxito. 
-
-Lo que entiendo que sucede es un conflicto de tiempos de ejecución, ya que cada sketch por separado funciona bien pero al unificarlos el PID pierde precisión y el motor de pasos se comporta de manera errónea. Para solucionar este inconveniente intenté implementar FreeRTOS, este es un sistema operativo de tiempo real kernel para dispositivos embebidos que puede correr en un microcontrolador. Aquí logramos switchear entre ambas tareas y asignarles prioridades. 
+Aquí está el código del suscriptor:
 
 ```c++
-#include "PID_RT.h"
-PID_RT PID;
+#include <WiFi.h>
+#include <PubSubClient.h>
 
-const int PWM_PIN = 3;  // UNO PWM pin
-int op = 0;
-float input = 0;
+const char* ssid = "Wokwi-GUEST";
+const char* password = "";
+const char* mqtt_server = "broker.hivemq.com";
+const int mqtt_port = 1883;
 
-const int analogInPin = A0;  // Analog input pin that the potentiometer is attached to
-const int analogOutPin = 9; // Analog output pin that the LED is attached to
-float m = 0.0;
-float tempF = 0.0;
-int sensorValue = 0;        // value read from the pot
-long int sensorValue1 = 410.0 ;
-long int sensorValue2 = 668.0;
-int temperatura1 = 0;
-int temperatura2 = 500;
-int offset = 25;
-String inString = "";
-
-int outputValue = 0;        // value output to the PWM (analog out)
-int SerialComando = 0;
+WiFiClient espClient;
+PubSubClient client(espClient);
+int ledPin = 4;
 
 void setup() {
-  Serial.begin(9600);
+  pinMode(ledPin, OUTPUT);
+  Serial.begin(115200);
+  setup_wifi();
+  client.setServer(mqtt_server, mqtt_port);
+  client.setCallback(callback);
+}
 
-  PID.setPoint(100);
-  PID.setOutputRange(0, 255);   //  PWM range
-  PID.setInterval(50);
-  PID.setK(10, 1, 15);
-  PID.start();
+void setup_wifi() {
+  delay(10);
+  WiFi.begin(ssid, password);
+  while (WiFi.status() != WL_CONNECTED) {
+    delay(500);
+    Serial.print(".");
+  }
+  Serial.println(" Conectado a WiFi");
+}
 
-  calibracionProceso();
+void reconnect() {
+  while (!client.connected()) {
+    Serial.print("Intentando conectar al broker MQTT...");
+    if (client.connect("ESP32B")) {
+      Serial.println(" Conectado al broker MQTT");
+      client.subscribe("esp32/input");
+      Serial.println(" Suscrito al tópico: esp32/input");
+    } else {
+      Serial.print(" Error de conexión, rc=");
+      Serial.print(client.state());
+      Serial.println(" intentando de nuevo en 5 segundos");
+      delay(5000);
+    }
+  }
+}
+
+void callback(char* topic, byte* payload, unsigned int length) {
+  String message;
+  for (int i = 0; i < length; i++) {
+    message += (char)payload[i];
+  }
+
+  Serial.print("Mensaje recibido en el tópico ");
+  Serial.print(topic);
+  Serial.print(": ");
+  Serial.println(message);
+
+  if (message == "ON") {
+    digitalWrite(ledPin, HIGH);
+    Serial.println("LED encendido");
+  } else if (message == "OFF") {
+    digitalWrite(ledPin, LOW);
+    Serial.println("LED apagado");
+  }
 }
 
 void loop() {
-  sensorValue = analogRead(analogInPin);
-  Serial.print("Sensor PT100 = ");
-  Serial.print(sensorValue);
-  Serial.print("\t Temperatura = ");
-  tempF = (float)(m * (sensorValue - sensorValue2) + temperatura2 - offset);
-  Serial.print(tempF);
-  Serial.println("°C");
-
-  input = tempF;
-  //  input = analogRead(A0);
-  if (PID.compute(input))
-  {
-    op = PID.getOutput();
-    analogWrite(PWM_PIN, op);
-    Serial.print(" op: ");
-    Serial.print(op);
-    Serial.print(" ");
+  if (!client.connected()) {
+    reconnect();
   }
-
-  Serial.print(" Potenciómetro: ");
-  Serial.print(lectura_pote);
-  Serial.print(" ");
-}
-
-void calibracionProceso() {
-
-  Serial.print("La pendiente del sistema es m=(y2-y1)/(x2-x1)=");
-  m = (float)((temperatura1 - temperatura2) / ((float)sensorValue1 - (float)sensorValue2));
-  Serial.println(m);
-
+  client.loop();
 }
 ```
 
+### Paso 5: Pruebas en Wokwi
 
-El resultado no fue muy convincente, solo funciona una de las dos tareas cuando le damos la máxima prioridad. Me toca seguir investigando alternativas para poder implementar un control más robusto para el extrusor.
+Se cargó el código en ambas pestañas y se ejecutó la simulación.
+Se verificó en el monitor serie de ambas pestañas. Si todo está configurado correctamente, cuando se presiona el botón en el ESP32 A, el LED en el ESP32 B debería encenderse o apagarse, dependiendo del mensaje MQTT enviado.
+Cómo se puede apreciar en el siguiente video, este flujo permite una comunicación básica entre dispositivos usando MQTT, facilitando el control remoto entre placas ESP32.
 
+<div align="center"><iframe src="https://drive.google.com/file/d/1nIHVcPKGkThaf0ov-ETHRxmRAPoADjvv/preview" width="640" height="480" allow="autoplay"></iframe></div>
+
+### Paso 6: Conección placa física - placa en simulador 
+
+Para realizar la comunicación entre la placa física (ESP32 A) y la segunda placa (simulada en Wokwi), se configuró para conectarse a una red Wi-Fi local ingresando el nombre y la contraseña correspondientes.
+En el simulador Wokwi, el ESP32 B se conectó a la red predeterminada "Wokwi-GUEST".
+Ambos dispositivos (ESP32 físico y en Wokwi) se conectaron al mismo broker MQTT público (broker.hivemq.com) para asegurar que puedan comunicarse, independientemente de la red en la que estén.
+Ambos dispositivos se configuraron para publicar y suscribirse al mismo tópico (esp32/input), asegurando la comunicación en ambas direcciones.
+Se utilizaron mensajes en el monitor serie para confirmar que el ESP32 físico y el de Wokwi estaban conectados al broker y suscritos correctamente al tópico compartido.
+
+<div align="center"><iframe src="https://drive.google.com/file/d/1kZQqPUgnONLnH3Nf7V_q9gRzpb3-fy2w/preview" width="640" height="480" allow="autoplay"></iframe></div>
+
+En esta actividad, logramos establecer comunicación entre una placa ESP32 física y una placa ESP32 en el simulador Wokwi a través del protocolo MQTT, lo que nos permitió controlar un actuador remoto en el simulador mediante el estado de un sensor en el dispositivo físico. Este ejercicio consolidó conceptos clave de la IoT, como la publicación y suscripción a tópicos MQTT, la configuración de redes Wi-Fi y la integración de hardware virtual y físico.
+El uso de un broker MQTT público fue fundamental para lograr esta interacción en redes diferentes, lo que demuestra la versatilidad y escalabilidad del protocolo MQTT en aplicaciones de control remoto. Además, la actividad nos permitió enfrentar y resolver desafíos de conectividad y depuración en dispositivos de distinta naturaleza, acercándonos a un entorno de IoT real. Esta experiencia nos proporciona una base sólida para proyectos más complejos de automatización y control distribuidos los cuales tienen gran compatibilidad con nuestro trayecto académico en la EFDI.
